fix: improve text wrapping for french labels
- Remove white-space: nowrap from equipment and plate groups
- Add white-space: normal to h4 titles for better text wrapping
- Fix display issues with longer french text labels

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -262,7 +262,6 @@ h3 {
 }
 
 .equipment-group {
-  white-space: nowrap;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: min-content;
@@ -271,6 +270,9 @@ h3 {
   grid-gap: 5px;
   min-width: 100%;
   max-height: min-content;
+  h4 {
+    white-space: normal;
+  }
   input {
     text-align: center;
     background: $background-color;
@@ -314,7 +316,6 @@ h3 {
 }
 
 .plate-group {
-  white-space: nowrap;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: auto;
@@ -324,6 +325,9 @@ h3 {
   width: 100%;
   font-size: 1em;
   cursor: pointer;
+  h4 {
+    white-space: normal;
+  }
   select {
     background: $background-color;
     font-size: 0.8em;
